# qrhide

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yaml  index.html
.cargo/: config.toml
docs/: index.html  qrhide-cea5ceb093d53b45.js
src/: main.rs
